# Text-Editor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  text_editor_docs.md
.github/workflows/: ci.yml
Schema/: DocumentSchema.js  FolderSchema.js  README.md  UserSchema.js  index.js
docs/: REQUIREMENTS.md
docs/adr/: 0001-core-architecture-decisions.md  0002-hardening-decisions.md  0003-search-anchor-semantics.md
src/text_editor/: __init__.py  __main__.py  app.py  buffer.py  command_parser.py  commands.py  config.py  cursor.py  display.py  errors.py  fileio.py  keymap.py  render.py  search.py  state.py  undo.py  viewport.py
tests/: conftest.py  helpers.py  test_app.py  test_buffer.py  test_buffer_extended.py  test_cli.py  test_command_parser.py  test_command_parser_extended.py  test_commands.py  test_commands_coverage.py  test_config.py  test_config_extended.py  test_coverage_gaps.py  test_cursor.py  test_cursor_viewport.py  test_dispatch.py  test_display.py  test_display_extended.py  test_errors.py  test_fileio.py  test_fileio_extended.py  test_keymap.py  test_main_init.py  test_render.py  test_render_extended.py  test_search.py  test_search_extended.py  test_state_extended.py  test_undo.py  test_undo_extended.py
